--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,26 +1,39 @@
 // En este documento se definen los estilos propios de la aplicacion
 
 // Variables de los colores
-$lightOrange: #FF9800;
-$darkOrange: #f2762e;
+$light-orange: #FF9800;
+$dark-orange: #f2762e;
 $white: #ffffff;
-$linkColor: $lightOrange;
-$darkGrey: #2b2b2b;
-$bodyColor: #fbfbfb;
+$link-color: $light-orange;
+$dark-grey: #2b2b2b;
+$light-grey: #9d9d9d;
+$body-color: #fbfbfb;
 
 // Estilos del navbar
-$navbar-default-bg: $darkGrey;
+$navbar-default-bg: $dark-grey;
 $navbar-default-brand-color: $white;
-$navbar-default-link-hover-color: $lightOrange;
+$navbar-default-link-hover-color: $light-orange;
+$navbar-default-link-active-color: $light-orange;
+$navbar-default-toggle-border-color: transparent;
+$navbar-default-toggle-hover-bg: transparent;
 
 // Botones
-$btn-primary-bg: $lightOrange;
-$btn-primary-border: $lightOrange;
+$btn-primary-bg: $light-orange;
+$btn-primary-border: $light-orange;
+$btn-border-radius-base: 2px;
+
+// Forms
+$input-border-focus: $light-orange;
+$input-border-radius: 0px;
+
+// Panels
+$panel-border-radius: 0px;
+$panel-default-border: transparent;
 
 // Otros
-$body-bg: $bodyColor;
-$link-color: $lightOrange;
-$link-hover-color: $lightOrange;
+$body-bg: $body-color;
+$link-color: $light-grey;
+$link-hover-color: $light-orange;
 
 
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
@@ -37,26 +50,18 @@ body {
   height: 80%;
 }
 
-.form-control{
-  border-radius: 3px !important;
-  background-color: rgba(0, 0, 0, 0.05) !important;
-  box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset !important;
-  color: #212121 !important;
-}
-
-.form-control:hover{
-  background-color: rgba(0,0,0,.16) !important;
-}
-
 .form-control:focus{
-  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset !important;
-  background-color: rgba(0,0,0,0.23) !important;
-  color: #212121 !important;
-  border-color: transparent !important;
+  box-shadow: 0px 0px 0px transparent;
+  border: 2px solid $light-orange;
+}
+
+.panel{
+  border: 0px solid transparent;
+  box-shadow: 2px 2px 7px #888888;
 }
 
 .body-footer{
-  background-color: $darkGrey;
+  background-color: $dark-grey;
   padding: 40px;
 }
 .text-footer{
@@ -64,7 +69,7 @@ body {
 }
 
 .highligh-footer{
-  color: $darkOrange;
+  color: $dark-orange;
 }
 
 .title-footer{
