--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -14,9 +14,6 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Información del anuncio</h3>
-          </div>
           <div class="panel-body">
             <div class="form-horizontal">
               <div class="form-group" id="title_group">
@@ -60,7 +57,7 @@
                   <%= f.label :important, 'Incluir en el carousel' %>
                 </div>
                 <div class="col-md-1 col-md-1 col-xs-1">
-                  <%= f.check_box :important, id: 'check_important'%>
+                  <%= f.check_box :important, id: 'check_important' %>
                 </div>
               </div>
               <div id="carousel_part">
@@ -83,10 +80,12 @@
                     </div>
                 <% end %>
               </div>
+              <div class="row">
+                <div class="col-md-3 col-md-offset-9 col-xs-4 col-lg-2 col-lg-offset-10">
+                  <%= f.submit class: 'btn btn-primary btn-block' %>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="panel-footer">
-            <%= f.submit class: 'btn btn-primary btn-block' %>
           </div>
         </div>
       </div>
