--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -85,7 +85,7 @@ body {
 
 .form-control:focus{
   box-shadow: 0px 0px 0px transparent;
-  border: 2px solid $light-orange;
+  border: 2px solid $orange-light;
 }
 
 .panel{
