--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,6 @@
   <title>
     <%= content_for?(:title) ? yield(:title) | 'AECCI' : 'AECCI' %>
   </title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -15,8 +13,18 @@
 </head>
 <body>
   <%= render 'layouts/navbar' %>
+
+  <%# Flash messages %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 col-xs-12">
+        <%= render 'layouts/flash_messages' %>
+      </div>
+    </div>
+  </div>
+
+  <%# Main content %>
   <div class="container-fluid">
-    <%= render 'layouts/flash_messages' %>
     <%= yield %>
 
     <%# Información para modo desarrollo %>
