--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -83,15 +83,16 @@ body {
   height: 80%;
 }
 
-.form-control:focus{
+.form-control:focus {
   box-shadow: 0px 0px 0px transparent;
   border: 2px solid $orange-light;
 }
 
-.panel{
+.panel {
   border: 0px solid transparent;
   box-shadow: 2px 2px 7px #888888;
 }
+
 .body-footer {
   background-color: $grey-dark;
   padding: 40px;
@@ -111,6 +112,10 @@ body {
 
 .center-cell {
   text-align: center;
+}
+
+.btn-primary {
+  box-shadow: 0px 2px 3px #888888;
 }
 
 // == Fin Varios estilos ==
