--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -59,13 +59,18 @@
             </table>
           </div>
         </div>
+        <div class="row">
+          <hr/>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="pull-right">
+              <%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary' %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-2 col-md-offset-8">
-    <%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary btn-block' %>
   </div>
 </div>
 <div class="row">
@@ -78,22 +83,26 @@
 <!-- Los otros usuarios deben de tener otra vista-->
 <% @ads.each do |ad| %>
     <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-        <h3> <%= ad.title %></h3>
-        <br/>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-7 col-md-offset-1">
-        <%= ad.description %>
-      </div>
-      <div class="col-md-3">
-        <%= image_tag ad.image_url, class: 'img-responsive img-rounded' %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-        <hr/>
+      <div class="col-md-8 col-md-offset-2">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1 col-xs-12">
+                <h3> <%= ad.title %></h3>
+              </div>
+            </div>
+            <hr/>
+            <div class="row">
+              <div class="col-md-7 col-md-offset-1 col-xs-12">
+                <%= ad.description %>
+              </div>
+              <div class="col-md-3 col-xs-12">
+                <%= image_tag ad.image_url, class: 'img-responsive img-rounded' %>
+              </div>
+            </div>
+            <br/>
+          </div>
+        </div>
       </div>
     </div>
 <% end %>
