--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -93,10 +93,10 @@
             </div>
             <hr/>
             <div class="row">
-              <div class="col-md-7 col-md-offset-1 col-xs-12">
+              <div class="col-md-6 col-md-offset-1 col-xs-12">
                 <%= ad.description %>
               </div>
-              <div class="col-md-3 col-xs-12">
+              <div class="col-md-4 col-xs-12 section">
                 <%= image_tag ad.image_url, class: 'img-responsive img-rounded' %>
               </div>
             </div>
