--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-    <%= content_for?(:title) ? yield(:title) | 'AECCI' : 'AECCI' %>
+    <%= content_for?(:title) ? yield(:title) | 'AECCI | Universidad de Costa Rica' : 'AECCI | Universidad de Costa Rica' %>
   </title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
