--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,9 +4,7 @@
       <%# Botón para vista de móvil %>
       <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#opciones-navbar" data-toggle="collapse" type="button">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="glyphicon glyphicon-option-vertical title-footer" aria-hidden="true"></span>
       </button>
       <%# Logo %>
       <%= link_to 'AECCI', root_path, class: 'navbar-brand' %>
