--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -1,26 +1,39 @@
+<% ads = Ad.where(important: true) %>
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
+  <%# Indicadores %>
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <% count = 0 %>
+    <% ads.each do |ad| %>
+        <% if count == 0 %>
+            <li class="active" data-slide-to=<%= count %> data-target="#my_carousel"></li>
+        <% else %>
+            <li data-slide-to=<%= count %> data-target="#my_carousel"></li>
+        <% end %>
+        <% count = count + 1 %>
+    <% end %>
   </ol>
-
-  <!-- Wrapper for slides -->
+  <%# Wrappers para los slides %>
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12644744_10207637957761072_1135077213064854338_n.jpg?oh=4293f4fea899bb1bde2438b306b5faaa&oe=576AC3D6" alt="...">
-      <div class="carousel-caption">
-        Prueba 1
-      </div>
-    </div>
-    <div class="item">
-      <img src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12644744_10207637957761072_1135077213064854338_n.jpg?oh=4293f4fea899bb1bde2438b306b5faaa&oe=576AC3D6" alt="...">
-      <div class="carousel-caption">
-        Prueba 2
-      </div>
-    </div>
+    <% count = 0 %>
+    <% ads.each do |ad| %>
+        <% if count == 0 %>
+            <div class="item active">
+              <%= image_tag ad.image_carousel_url %>
+              <div class="carousel-caption">
+                <%= ad.title %>
+              </div>
+            </div>
+        <% else %>
+            <div class="item">
+              <%= image_tag ad.image_carousel_url %>
+              <div class="carousel-caption">
+                <%= ad.title %>
+              </div>
+            </div>
+        <% end %>
+        <% count = count + 1 %>
+    <% end %>
   </div>
-
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
   </a>
