--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -1,42 +1,48 @@
 <% ads = Ad.where(important: true) %>
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <%# Indicadores %>
-  <ol class="carousel-indicators">
-    <% count = 0 %>
-    <% ads.each do |ad| %>
-        <% if count == 0 %>
-            <li class="active" data-slide-to=<%= count %> data-target="#my_carousel"></li>
-        <% else %>
-            <li data-slide-to=<%= count %> data-target="#my_carousel"></li>
+<% if ads.count > 0 %>
+    <div id="my_carousel" class="carousel slide" data-ride="carousel">
+      <%# Indicadores %>
+      <ol class="carousel-indicators">
+        <% count = 0 %>
+        <% ads.each do |ad| %>
+            <% if count == 0 %>
+                <li class="active" data-slide-to=<%= count %> data-target="#my_carousel"></li>
+            <% else %>
+                <li data-slide-to=<%= count %> data-target="#my_carousel"></li>
+            <% end %>
+            <% count = count + 1 %>
         <% end %>
-        <% count = count + 1 %>
-    <% end %>
-  </ol>
-  <%# Wrappers para los slides %>
-  <div class="carousel-inner" role="listbox">
-    <% count = 0 %>
-    <% ads.each do |ad| %>
-        <% if count == 0 %>
-            <div class="item active">
-              <%= image_tag ad.image_carousel_url %>
-              <div class="carousel-caption">
-                <%= ad.title %>
-              </div>
-            </div>
-        <% else %>
-            <div class="item">
-              <%= image_tag ad.image_carousel_url %>
-              <div class="carousel-caption">
-                <%= ad.title %>
-              </div>
-            </div>
+      </ol>
+      <%# Wrappers para los slides %>
+      <div class="carousel-inner" role="listbox">
+        <% count = 0 %>
+        <% ads.each do |ad| %>
+            <% if count == 0 %>
+                <div class="item active">
+                  <%= image_tag ad.image_carousel_url %>
+                  <div class="carousel-caption">
+                    <%= ad.title %>
+                  </div>
+                </div>
+            <% else %>
+                <div class="item">
+                  <%= image_tag ad.image_carousel_url %>
+                  <div class="carousel-caption">
+                    <%= ad.title %>
+                  </div>
+                </div>
+            <% end %>
+            <% count = count + 1 %>
         <% end %>
-        <% count = count + 1 %>
-    <% end %>
-  </div>
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-  </a>
-</div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#my_carousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#my_carousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+<% end %>
