Se completa el carousel

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,7 +75,12 @@ $link-hover-color: $orange-light;
 
 // Espacio para el navbar
 body {
-  padding-top: 50px;
+  padding-top: 60px;
+}
+
+.fix-carousel{
+  margin-top: -10px;
+  box-shadow: 2px 2px 7px #888888;
 }
 
 .img-show {
@@ -137,7 +142,7 @@ body {
 // Esto es para que la imagen abarque el ancho completo del carousel
 .carousel img{
   min-width: 100%;
-  max-height: 95vh;
+  max-height: 600px;
 }
 // Agrega una linea gris a la izquierda
 .section {
