--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -69,8 +69,6 @@
                   <div class="col-md-8 col-lg-9">
                     <%= f.file_field :image_carousel_url %>
                     <%= f.hidden_field :image_carousel_url_cache %>
-                    <p class="text-info">Las dimensiones de esta imagen tiene que ser de YY x ZZ pixeles como
-                      mínimo.</p>
                   </div>
                 </div>
                 <% if @ad.image_carousel_url? %>
@@ -80,6 +78,13 @@
                       </div>
                     </div>
                 <% end %>
+                <div class="form-group">
+                  <div class="col-xs-12">
+                    <small><p class="text-info">Las dimensiones de esta imagen tiene que ser de 600x1800 pixeles y
+                      tiene que ser archivos en formato .jpg, .png o .gif para una correcta visualización en el
+                      carousel.</p></small>
+                  </div>
+                </div>
               </div>
               <div class="row">
                 <hr/>
