--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -82,7 +82,7 @@
 
 <!-- Los otros usuarios deben de tener otra vista-->
 <% @ads.each do |ad| %>
-    <div class="row">
+    <div class="row" id="<%= ad.title %>">
       <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
           <div class="panel-body">
