--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,7 @@
             <% end %>
             <li><%= link_to 'Cerrar sesión', destroy_user_session_path, method: :delete %></li>
         <% else %>
-            <li><%= button_to 'Iniciar Sesión', new_user_session_path, method: :get, class: 'btn navbar-btn btn-login' %></li>
+            <li><%= button_to 'Ingresar', new_user_session_path, method: :get, class: 'btn navbar-btn btn-login' %></li>
             <li><%= button_to 'Registrarse', new_user_registration_path, method: :get, class: 'btn navbar-btn btn-registro' %></li>
         <% end %>
       </ul>
