--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -83,6 +83,14 @@ body {
   height: 80%;
 }
 
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
 .form-control:focus {
   box-shadow: 0px 0px 0px transparent;
   border: 2px solid $orange-light;
