--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,25 +1,34 @@
+<br/>
+<%= devise_error_messages! %>
 <div class="row">
   <div class="col-md-6 col-md-offset-3 col-xs-12">
-    <h3>Reenviar instrucciones de confirmación de la cuenta</h3>
-    <hr/>
-    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: {method: :post}) do |f| %>
-        <%= devise_error_messages! %>
-
-        <div class="form-horizontal">
-          <div class="form-group">
-            <div class="col-xs-12">
-              <%= f.email_field :email, autofocus: true, placeholder: 'Correo electrónico', class: 'form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <div class="col-xs-12">
-              <%= f.submit 'Reenviar instrucciones', class: 'btn btn-block btn-primary' %>
-            </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>Reenviar instrucciones de confirmación de la cuenta</h2>
+            <hr/>
           </div>
         </div>
-    <% end %>
-    <hr/>
+        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: {method: :post}) do |f| %>
+            <div class="form-horizontal">
+              <div class="form-group">
+                <div class="col-xs-12 col-md-10 col-md-offset-1">
+                  <%= f.email_field :email, autofocus: true, placeholder: 'Correo electrónico', class: 'form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+                </div>
+              </div>
+              <div class="row">
+                <hr/>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <%= f.submit 'Reenviar instrucciones', class: 'btn btn-block btn-primary' %>
+                </div>
+              </div>
+            </div>
+        <% end %>
+      </div>
+    </div>
     <%= render 'devise/shared/links' %>
   </div>
 </div>
