Se agrega referencia al número de teléfono en el footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -40,7 +40,10 @@
           <li>
             <a href="https://www.facebook.com/aecci.ucr/" class="text-footer" target="_blank"><i class="fa fa-facebook highligh-footer"></i>
               Hazte fan</a></li>
-          <li><i class="fa fa-phone highligh-footer"></i><span class="text-footer">  (+506) 2511 8027</span></li>
+          <li>
+            <a href="tel:+50625118027" class="text-footer">
+              <i class="fa fa-phone highligh-footer"></i> (+506) 2511 8027</a>
+          </li>
           <li>
             <a href="https://goo.gl/maps/qce48V5g1F52" class="text-footer" target="_blank"><i class="fa fa-map-marker highligh-footer"></i>
               San Pedro, San José, Costa Rica</a></li>
