Se realiza un partial para el encabezado de los correos electrónicos. Se realiza una vista previa en la subida de imágenes

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Bienvenido <%= @email %> a la plataforma de la AECCI</p>
+<%= render 'mail_header' %>
 
 <p>Confirme su cuenta en el siguiente vinculo</p>
 
