--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hola <%= @resource.email %></p>
+<%= render 'mail_header' %>
 
-<p>lguien ha realizado un petición para cambiar su contrseña. Este procedimiento se puede
-  realizar digitando el siguiente vínculo</p>
+<p>Alguien ha realizado una peticion para cambiar su contrasena.</p>
+<P>Este procedimiento se puede realizar ingresando en el siguiente vinculo</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><b><%= link_to 'Cambiar mi contrasena', edit_password_url(@resource, reset_password_token: @token) %></b></p>
 
