--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -3,36 +3,32 @@
     <div id="my_carousel" class="carousel slide fix-carousel" data-ride="carousel">
       <%# Indicadores %>
       <ol class="carousel-indicators">
-        <% count = 0 %>
-        <% ads.each do |ad| %>
+        <% ads.each_index do |count| %>
             <% if count == 0 %>
                 <li class="active" data-slide-to=<%= count %> data-target="#my_carousel"></li>
             <% else %>
                 <li data-slide-to=<%= count %> data-target="#my_carousel"></li>
             <% end %>
-            <% count = count + 1 %>
         <% end %>
       </ol>
       <%# Wrappers para los slides %>
       <div class="carousel-inner" role="listbox">
-        <% count = 0 %>
-        <% ads.each do |ad| %>
+        <% ads.each_with_index do |ad, count| %>
             <% if count == 0 %>
                 <div class="item active">
-                  <%= link_to image_tag( ad.image_carousel_url ), ads_url<<'#'<<ad.title %>
+                  <%= link_to image_tag(ad.image_carousel_url), ads_url << '#' << ad.title %>
                   <div class="carousel-caption">
                     <%= ad.title %>
                   </div>
                 </div>
             <% else %>
                 <div class="item">
-                  <%= link_to image_tag( ad.image_carousel_url ), ads_url<<'#'<<ad.title %>
+                  <%= link_to image_tag(ad.image_carousel_url), ads_url << '#' << ad.title %>
                   <div class="carousel-caption">
                     <%= ad.title %>
                   </div>
                 </div>
             <% end %>
-            <% count = count + 1 %>
         <% end %>
         <!-- Controls -->
         <a class="left carousel-control" href="#my_carousel" role="button" data-slide="prev">
