--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
-<p>Hola <%= @resource.email %></p>
+<%= render 'mail_header' %>
 
-<p>Comunicamos que su contraseña ha cambiado</p>
+<p>La plataforma de la AECCI comunica que su contrasena ha cambiado.</p>
