Se agrega el modal de bootstrap para confirmar el borrado

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,8 +33,10 @@
               constituir la base de la unidad universitaria. Esta trascendente reforma también da como resultado la
               aprobación de una nueva Ley Fundamental de Educación para el país, inspirada en el pensamiento y en las
               inquietudes de la comunidad universitaria.
-              <button class="btn btn-link btn-sm" id="btn-show-more">Mostrar más</button>
             </p>
+            <div class="row">
+              <button class="btn btn-link btn-sm" id="btn-show-more">Mostrar más</button>
+            </div>
             <div id="hide-area">
               <p>
                 El Segundo Congreso, celebrado en 1966, introdujo cambios tendientes a modernizar la Universidad. En
