--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -23,7 +23,7 @@
               <thead>
               <tr>
                 <th>Título</th>
-                <th class="center-cell">En el carousel</th>
+                <th class="center-cell">¿En el carousel?</th>
                 <th colspan="3" class="center-cell"> Acciones</th>
               </tr>
               </thead>
@@ -49,7 +49,7 @@
                       <% end %>
                     </td>
                     <td class="center-cell">
-                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro?'} do %>
+                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio?'} do %>
                           <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
                       <% end %>
                     </td>
