--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <!-- Esta deberia de ser la vista para los miembros de la asocia -->
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
@@ -49,7 +47,7 @@
                       <% end %>
                     </td>
                     <td class="center-cell">
-                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio?'} do %>
+                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio?', commit:'Eliminar', cancel:'Cancelar' } do %>
                           <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
                       <% end %>
                     </td>
