--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -130,14 +130,8 @@ body {
 .btn-primary {
   box-shadow: 0px 2px 3px $shadow-color;
   &:hover {
-    background-color: $orange-light;
-    border-color: $orange-light;
-    box-shadow: 0px 3px 4px $shadow-color;
-  }
-  &:active {
-    background-color: $orange-light;
-    border-color: $orange-light;
-    box-shadow: 0px 2px 5px $shadow-color;
+    background-color: $orange-dark;
+    border-color: $orange-dark;
   }
 }
 
