--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -47,7 +47,7 @@
                       <% end %>
                     </td>
                     <td class="center-cell">
-                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio?', commit:'Eliminar', cancel:'Cancelar' } do %>
+                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio "' << ad.title << '"?', commit:'Eliminar', cancel:'Cancelar' } do %>
                           <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
                       <% end %>
                     </td>
