--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@ad, html: {multipart: true}) do |f| %>
-    <% if @ad.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
-
-          <ul>
-            <% @ad.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
+    <%= render 'shared/error_messages', object: @ad %>
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
