--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,25 +1,32 @@
+<br/>
 <div class="row">
   <div class="col-md-6 col-md-offset-3 col-xs-12">
-    <h3>¿Olvidó su contraseña?</h3>
-    <hr/>
-
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post}) do |f| %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>¿Olvidó su contraseña?</h2>
+            <hr/>
+          </div>
+        </div>
         <%= devise_error_messages! %>
-
-    <div class="form-horizontal">
-      <div class="form-group">
-        <div class="col-xs-12">
-          <%= f.email_field :email, placeholder: 'Correo electrónico', autofocus: true, class: 'form-control' %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-xs-12">
-          <%= f.submit 'Enviar instrucciones para reestablecer contraseña', class: 'btn btn-block btn-primary' %>
-        </div>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post}) do |f| %>
+            <div class="form-horizontal">
+              <div class="form-group">
+                <div class="col-xs-12">
+                  <%= f.email_field :email, placeholder: 'Correo electrónico', autofocus: true, class: 'form-control' %>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-xs-12">
+                  <%= f.submit 'Enviar instrucciones para reestablecer contraseña', class: 'btn btn-block btn-primary' %>
+                </div>
+              </div>
+            </div>
+        <% end %>
+        <hr/>
       </div>
     </div>
-    <% end %>
-    <hr/>
     <%= render 'devise/shared/links' %>
   </div>
 </div>
