--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-1 col-md-offset-1">
-    <h1>Página "¿Quiénes somos?"</h1>
+  <div class="col-md-6 col-md-offset-3">
+    <h1 class="text-center">Página "¿Quiénes somos?"</h1>
   </div>
 </div>
