Se añade roles a los anuncios

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,6 +31,10 @@ $input-border-radius: 0px;
 $panel-border-radius: 2px;
 $panel-default-border: transparent;
 
+// Pagination
+$pagination-active-bg: $orange-light;
+$pagination-active-border: $orange-light;
+
 // Otros
 $body-bg: $body-color;
 $link-color: $grey-light;
