--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,82 +1,83 @@
-<!-- Esta deberia de ser la vista para los miembros de la asocia -->
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <h1>Anuncios del sitio</h1>
     <hr/>
   </div>
 </div>
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-xs-12">
-            <h2>Administrador de anuncios</h2>
-            <hr/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <table class="table table-striped">
-              <thead>
-              <tr>
-                <th>Título</th>
-                <th class="center-cell">¿En el carousel?</th>
-                <th colspan="3" class="center-cell"> Acciones</th>
-              </tr>
-              </thead>
-              <tbody>
-              <% @ads.each do |ad| %>
+<!-- Esta deberia de ser la vista para los miembros de la asocia -->
+<% if current_user.admin? %>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-xs-12">
+                <h2>Administrador de anuncios</h2>
+                <hr/>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1">
+                <table class="table table-striped">
+                  <thead>
                   <tr>
-                    <td><%= ad.title %></td>
-                    <td class="center-cell">
-                      <% if ad.important? %>
-                          <span class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
-                      <% else %>
-                          <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
-                      <% end %>
-                    </td>
-                    <td class="center-cell">
-                      <%= link_to ad do %>
-                          <span class="glyphicon glyphicon-eye-open text-info" aria-hidden="true"></span>
-                      <% end %>
-                    </td>
-                    <td class="center-cell">
-                      <%= link_to edit_ad_path(ad) do %>
-                          <span class="text-warning glyphicon glyphicon-edit" aria-hidden="true"></span>
-                      <% end %>
-                    </td>
-                    <td class="center-cell">
-                      <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio "' << ad.title << '"?', commit:'Eliminar', cancel:'Cancelar' } do %>
-                          <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
-                      <% end %>
-                    </td>
+                    <th>Título</th>
+                    <th class="center-cell">¿En el carousel?</th>
+                    <th colspan="3" class="center-cell"> Acciones</th>
                   </tr>
-              <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="row">
-          <hr/>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="pull-right">
-              <%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary' %>
+                  </thead>
+                  <tbody>
+                  <% @ads.each do |ad| %>
+                      <tr>
+                        <td><%= ad.title %></td>
+                        <td class="center-cell">
+                          <% if ad.important? %>
+                              <span class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
+                          <% else %>
+                              <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+                          <% end %>
+                        </td>
+                        <td class="center-cell">
+                          <%= link_to ad do %>
+                              <span class="glyphicon glyphicon-eye-open text-info" aria-hidden="true"></span>
+                          <% end %>
+                        </td>
+                        <td class="center-cell">
+                          <%= link_to edit_ad_path(ad) do %>
+                              <span class="text-warning glyphicon glyphicon-edit" aria-hidden="true"></span>
+                          <% end %>
+                        </td>
+                        <td class="center-cell">
+                          <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio "' << ad.title << '"?', commit: 'Eliminar', cancel: 'Cancelar'} do %>
+                              <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
+                          <% end %>
+                        </td>
+                      </tr>
+                  <% end %>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="row">
+              <hr/>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="pull-right">
+                  <%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary' %>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <hr/>
-  </div>
-</div>
-
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <hr/>
+      </div>
+    </div>
+<% end %>
 
 <!-- Los otros usuarios deben de tener otra vista-->
 <% @ads.each do |ad| %>
@@ -92,7 +93,7 @@
             <hr/>
             <div class="row">
               <div class="col-md-6 col-md-offset-1 col-xs-12">
-                <%= ad.description %>
+                <p><%= ad.description %></p>
               </div>
               <div class="col-md-4 col-xs-12 section">
                 <%= image_tag ad.image_url, class: 'img-responsive img-rounded' %>
