--- a/app/views/shared/_error_messages.erb
+++ b/app/views/shared/_error_messages.erb
@@ -1,7 +1,8 @@
 <% if object.errors.any? %>
     <div class="alert alert-danger alert-block">
-      <button type="button" class="close" data-dismiss="alert">x</button>
-      <h5><%= I18n.t :form_has_x_errors, count: object.errors.count %></h5>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Cerrar">
+        <span aria-hidden="true">&times;</span></button>
+      <strong><%= I18n.t :form_has_x_errors, count: object.errors.count %></strong>
       <% object.errors.full_messages.each do |msg| %>
           <li class="error-description-message"><%= msg %></li>
       <% end %>
