--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -39,14 +39,19 @@
         <ul>
           <li>
             <a href="https://www.facebook.com/aecci.ucr/" class="text-footer" target="_blank"><i class="fa fa-facebook highligh-footer"></i>
-              Hazte fan</a></li>
+              Hazte fan</a>
+          </li>
+          <li>
+            <a href="mailto:aecci.ucr@gmail.com" class="text-footer"><i class="fa fa-envelope highligh-footer"></i> aecci.ucr@gmail.com</a>
+          </li>
           <li>
             <a href="tel:+50625118027" class="text-footer">
               <i class="fa fa-phone highligh-footer"></i> (+506) 2511 8027</a>
           </li>
           <li>
             <a href="https://goo.gl/maps/qce48V5g1F52" class="text-footer" target="_blank"><i class="fa fa-map-marker highligh-footer"></i>
-              San Pedro, San José, Costa Rica</a></li>
+              San Pedro, San José, Costa Rica</a>
+          </li>
         </ul>
       </div>
     </div>
