--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-3 col-md-offset-3 col-xs-6">
+  <div class="col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-3">
     <div class="card-container">
       <div class="card">
         <div class="front">
@@ -56,7 +56,7 @@
       </div> <!-- end card -->
     </div> <!-- end card-container -->
   </div>
-  <div class="col-md-3 col-xs-6">
+  <div class="col-md-4 col-lg-3">
     <div class="card-container">
       <div class="card">
         <div class="front">
@@ -109,7 +109,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-3 col-md-offset-3 col-xs-6">
+  <div class="col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-3">
     <div class="card-container">
       <div class="card">
         <div class="front">
@@ -160,7 +160,7 @@
       </div> <!-- end card -->
     </div> <!-- end card-container -->
   </div>
-  <div class="col-md-3 col-xs-6">
+  <div class="col-md-4 col-lg-3">
     <div class="card-container">
       <div class="card">
         <div class="front">
@@ -213,7 +213,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-3 col-md-offset-3 col-xs-6">
+  <div class="col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-3">
     <div class="card-container">
       <div class="card">
         <div class="front">
@@ -264,7 +264,7 @@
       </div> <!-- end card -->
     </div> <!-- end card-container -->
   </div>
-  <div class="col-md-3 col-xs-6">
+  <div class="col-md-4 col-lg-3">
     <div class="card-container">
       <div class="card">
         <div class="front">
