se cambia la letra por "FontAwesome" y se agrega la sección debajo del carousel

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
 <% if "#{request.protocol}#{request.host_with_port}#{request.fullpath}" == root_url %>
     <%= render 'layouts/carousel' %>
+    <%= render 'layouts/section_asocia'  %>
 <% end %>
 
 <%# Flash messages %>
