--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,12 +1,21 @@
 // == Variables de los colores ==
 $orange-light: #FF9800;
+$orange-lighter: #ffaa2d;
 $orange-dark: #f2762e;
 $white: #ffffff;
 $link-color: $orange-light;
 $grey-dark: #2b2b2b;
 $grey-light: #9d9d9d;
-$body-color: #fbfbfb;
+$body-color: #f3f3f3;
 $shadow-color: #888888;
+
+
+// Typografia
+$text-color: #666;
+$link-color: $grey-light;
+$link-hover-color: $orange-light;
+$font-family-sans-serif: 'FontAwesome', Arial, Helvetica, sans-serif;
+$font-family-serif: 'FontAwesome', Arial, Helvetica, sans-serif;
 
 // Estilos del navbar
 $navbar-default-bg: $grey-dark;
@@ -37,8 +46,6 @@ $pagination-active-border: $orange-light;
 
 // Otros
 $body-bg: $body-color;
-$link-color: $grey-light;
-$link-hover-color: $orange-light;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -82,6 +89,10 @@ body {
   padding-top: 60px;
 }
 
+h1, h2, h3, h4, h5, h6{
+  color: $grey-dark;
+}
+
 .fix-carousel {
   margin-top: -10px;
 }
@@ -104,8 +115,7 @@ body {
 }
 
 .panel {
-  border: 0px solid transparent;
-  box-shadow: 2px 2px 7px #888888;
+  box-shadow: 2px 2px 6px $shadow-color;
 }
 
 .body-footer {
@@ -120,7 +130,9 @@ body {
 .highligh-footer {
   color: $orange-dark;
 }
-
+.body-section{
+  background-color: $white;
+}
 .title-footer {
   color: #E0E0E0;
 }
@@ -130,10 +142,9 @@ body {
 }
 
 .btn-primary {
-  box-shadow: 0px 2px 3px $shadow-color;
   &:hover {
-    background-color: $orange-dark;
-    border-color: $orange-dark;
+    background-color: $orange-lighter;
+    border-color: $orange-lighter;
   }
 }
 
