--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -88,15 +88,15 @@
             <div class="row">
               <div class="col-md-10 col-md-offset-1 col-xs-12">
                 <h3> <%= ad.title %></h3>
+                <hr/>
               </div>
             </div>
-            <hr/>
             <div class="row">
-              <div class="col-md-6 col-md-offset-1 col-xs-12">
-                <p><%= ad.description %></p>
+              <div class="col-lg-5 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
+                <p class="text-justify"><%= ad.description %></p>
               </div>
-              <div class="col-md-4 col-xs-12 section">
-                <%= image_tag ad.image_url, class: 'img-responsive img-rounded' %>
+              <div class="col-lg-5 col-lg-offset-0 col-xs-12 col-md-10 col-md-offset-1">
+                <%= image_tag ad.image_url, class: 'img-rounded img-responsive img-center'%>
               </div>
             </div>
             <br/>
