Cambios de estilo y traducciones

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,4 @@
+
 // == Variables de los colores ==
 $orange-light: #FF9800;
 $orange-lighter: #ffaa2d;
@@ -14,8 +15,8 @@ $shadow-color: #888888;
 $text-color: #666;
 $link-color: $grey-light;
 $link-hover-color: $orange-light;
-$font-family-sans-serif: 'FontAwesome', Arial, Helvetica, sans-serif;
-$font-family-serif: 'FontAwesome', Arial, Helvetica, sans-serif;
+$font-family-sans-serif: 'Roboto', 'FontAwesome', Arial, Helvetica, sans-serif;
+$font-family-serif: 'Roboto', 'FontAwesome', Arial, Helvetica, sans-serif;
 
 // Estilos del navbar
 $navbar-default-bg: $grey-dark;
