--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 <!-- Esta deberia de ser la vista para los miembros de la asocia -->
-<% if user_signed_in? && current_user.admin?%>
+<% if user_signed_in? && current_user.admin? %>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
@@ -82,7 +82,7 @@
 <!-- Los otros usuarios deben de tener otra vista-->
 <% @ads.each do |ad| %>
     <div class="row" id="<%= ad.title %>">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-10 col-md-offset-1">
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="row">
@@ -93,10 +93,14 @@
             </div>
             <div class="row">
               <div class="col-lg-5 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
-                <p class="text-justify"><%= ad.description %></p>
+                <% ad.description.split("\n").each do |para| %>
+                    <p class="text-justify">
+                      <%= para %>
+                    </p>
+                <% end %>
               </div>
               <div class="col-lg-5 col-lg-offset-0 col-xs-12 col-md-10 col-md-offset-1">
-                <%= image_tag ad.image_url, class: 'img-rounded img-responsive img-center'%>
+                <%= image_tag ad.image_url, class: 'img-rounded img-responsive img-center' %>
               </div>
             </div>
             <br/>
