--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -169,4 +169,10 @@ h1, h2, h3, h4, h5, h6{
   list-style-type: none;
 }
 
+.message{
+  top: 60px;
+  position: absolute;
+  z-index: 10;
+}
+
 // == Fin Varios estilos ==
