--- a/app/views/layouts/_section_asocia.erb
+++ b/app/views/layouts/_section_asocia.erb
@@ -4,21 +4,21 @@
     <br/>
     <div class="row">
       <div class="col-xs-12 col-md-3 col-md-offset-2">
-        <h1 class="text-left">Asociación de Estudiantes de la ECCI</h1>
-        <h3 class="text-left text-footer">Universidad de Costa Rica</h3>
+        <h1 class="info-asocia">Asociación de Estudiantes de la ECCI</h1>
+        <h3 class="info-asocia text-footer">Universidad de Costa Rica</h3>
       </div>
       <div class="col-xs-12 col-md-5">
-        <p>laksldkandlkasd laksdlaksjdla dlaksmdlaksmdla dlaksmdlaksd laskdmlaksdmla dlkdaslkdmalsd alksdmlaksd
+        <p class="info-asocia">laksldkandlkasd laksdlaksjdla dlaksmdlaksmdla dlaksmdlaksd laskdmlaksdmla dlkdaslkdmalsd alksdmlaksd
           alskdmlaksd laksmdlaksd alksmdlaksd laksmdlasd laksmd.
         </p>
         <br/>
-        <p>
+        <p class="info-asocia">
           asodkanmkd aksndmlaskdmla dlaksmdlaksd laksdmoaks dlam sdlkamsdlakmsdl alsdkmalksdmla sdlksamldamls
           alskdmalskd asodjqouiduioqew dowiedwu iwuedhjiw idwuhe iqw qi dqiu diq diasdia. oajsoa oaijoiqwodq oqiwjdq
           oqiwjdoq doqiwjdoq doqiwjdoq doqiwjdoq doqiwjdoq doqiwndoqd.
         </p>
         <br/>
-        <p>
+        <p class="info-asocia">
           asodkanmkd aksndmlaskdmla dlaksmdlaksd laksdmoaks dlam sdlkamsdlakmsdl alsdkmalksdmla sdlksamldamls
           alskdmalskd asodjqouiduioqew dowiedwu iwuedhjiw idwuhe iqw qi dqiu diq diasdia. aoidoaisd qoiwdoqw doqiwdoq
           qoiwdjqo doqiwjdoq wdounicus aoisjdoasdi asodijaosd.
