--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -96,7 +96,7 @@
                 <%= ad.description.html_safe %>
               </div>
               <div class="col-lg-5 col-lg-offset-0 col-xs-12 col-md-10 col-md-offset-1">
-                <%= link_to image_tag(ad.image_url, class:'img-rounded img-responsive img-center'),"#{ad.image_url}", class:'fancybox'%>
+                <%= link_to image_tag(ad.image_url, class:'img-rounded img-responsive img-center'),"#{ad.image_url}",'data-lightbox'=>index, 'data-title'=>"#{ad.title}"%>
               </div>
             </div>
             <br/>
