--- a/app/views/layouts/_section_asocia.erb
+++ b/app/views/layouts/_section_asocia.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-3 col-md-offset-2">
         <h1 class="info-asocia">Asociación de Estudiantes de la ECCI</h1>
-        <h3 class="info-asocia text-footer">Universidad de Costa Rica</h3>
+        <h1 class="info-asocia"><small>Universidad de Costa Rica</small></h1>
       </div>
       <div class="col-xs-12 col-md-5">
         <p class="info-asocia">laksldkandlkasd laksdlaksjdla dlaksmdlaksmdla dlaksmdlaksd laskdmlaksdmla dlkdaslkdmalsd alksdmlaksd
